--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</div>
 			</div>
 		</a>
-		<a href="http://labyrinth.jiitconverge.cf">
+		<a href="http://labyrinth.jiitconverge.cf/login">
 			<div class="bottom">
 				<div class="content">
 					<h1>LABYRINTH</h1>
